fix overflow

--- a/src/View/chatPage.css
+++ b/src/View/chatPage.css
@@ -37,18 +37,19 @@
 }
 
 #chat-page #main {
+  width: calc(100% - var(--ribbon-size));
   display: flex;
   flex-direction: column;
-
-  width: 100%;
-  height: 100%;
-  flex: 1;
 }
 
 #chat-page #main > div,
 #chat-page #main .content {
   width: 100%;
   height: 100%;
+  flex: 1;
+
+  display: flex;
+  flex-direction: column;
 }
 
 #chat-page #main .content {
@@ -68,11 +69,15 @@
   width: var(--ribbon-size);
   border-right: 1px solid var(--border);
 
-  overflow: auto;
-
   justify-content: space-between;
 
   padding-bottom: var(--safe-area-bottom);
+}
+
+#chat-page #ribbon > span {
+  height: 100%;
+  flex: 1;
+  overflow: auto;
 }
 
 #chat-page #main .toolbar {
@@ -110,7 +115,12 @@
   width: 100%;
   max-width: var(--control-height);
   height: var(--control-height);
+  min-height: var(--control-height);
 
   align-items: center;
   justify-content: center;
+}
+
+#chat-page #ribbon > button {
+  margin-top: var(--gap-between-tiles);
 }
